--- a/java/pom.xml
+++ b/java/pom.xml
@@ -40,12 +40,12 @@
         <dependency>
             <groupId>com.bitmovin.api.sdk</groupId>
             <artifactId>bitmovin-api-sdk</artifactId>
-            <version>1.29.0</version>
+            <version>1.32.0</version>
         </dependency>
         <dependency>
-            <groupId>com.netflix.feign</groupId>
+            <groupId>io.github.openfeign</groupId>
             <artifactId>feign-slf4j</artifactId>
-            <version>8.18.0</version>
+            <version>9.7.0</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
