--- a/java/pom.xml
+++ b/java/pom.xml
@@ -33,6 +33,11 @@
                     </descriptorRefs>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.coveo</groupId>
+                <artifactId>fmt-maven-plugin</artifactId>
+                <version>2.10</version>
+            </plugin>
         </plugins>
     </build>
 
@@ -40,7 +45,7 @@
         <dependency>
             <groupId>com.bitmovin.api.sdk</groupId>
             <artifactId>bitmovin-api-sdk</artifactId>
-            <version>1.39.0</version>
+            <version>1.46.0</version>
         </dependency>
         <dependency>
             <groupId>io.github.openfeign</groupId>
