--- a/javascript/tsconfig.json
+++ b/javascript/tsconfig.json
@@ -14,6 +14,7 @@
     "declarationDir": "./dist",
     "outDir": "./dist",
     "target": "es5",
+    "downlevelIteration": true,
     "lib": [
       "dom",
       "es2015",
