--- a/java/examples.properties.template
+++ b/java/examples.properties.template
@@ -3,6 +3,12 @@ BITMOVIN_API_KEY=
 BITMOVIN_TENANT_ORG_ID=
 HTTP_INPUT_HOST=
 HTTP_INPUT_FILE_PATH=
+HTTP_INPUT_BUMPER_FILE_PATH=
+HTTP_INPUT_PROMO_FILE_PATH=
+HTTP_INPUT_FILE_PATH_STEREO_SOUND=
+HTTP_INPUT_FILE_PATH_SURROUND_SOUND=
+HTTP_INPUT_FILE_PATH_MULTIPLE_MONO_AUDIO_TRACKS=
+HTTP_INPUT_FILE_PATH_TWO_STEREO_TRACKS=
 S3_OUTPUT_BUCKET_NAME=
 S3_OUTPUT_ACCESS_KEY=
 S3_OUTPUT_SECRET_KEY=
