--- a/javascript/package.json
+++ b/javascript/package.json
@@ -11,15 +11,15 @@
     "examples"
   ],
   "scripts": {
-    "format": "prettier --write \"./{common,examples}/**/*.{ts,tsx,scss}\"",
-    "format-check": "prettier --list-different \"./{common,examples}/**/*.{ts,tsx,scss}\""
+    "format": "prettier --write \"./{common,src}/**/*.{ts,tsx,scss}\"",
+    "format-check": "prettier --list-different \"./{common,src}/**/*.{ts,tsx,scss}\""
   },
   "author": "Bitmovin Inc",
   "license": "MIT",
   "dependencies": {
-    "@bitmovin/api-sdk": "^1.81.0",
+    "@bitmovin/api-sdk": "^1.103.0",
     "@types/node": "^14.14.20",
-    "prettier": "^2.2.1",
+    "prettier": "^2.5.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
