Added HDR conversions examples for java, python and javascript.

--- a/java/examples.properties.template
+++ b/java/examples.properties.template
@@ -9,6 +9,10 @@ HTTP_INPUT_FILE_PATH_STEREO_SOUND=
 HTTP_INPUT_FILE_PATH_SURROUND_SOUND=
 HTTP_INPUT_FILE_PATH_MULTIPLE_MONO_AUDIO_TRACKS=
 HTTP_INPUT_FILE_PATH_TWO_STEREO_TRACKS=
+HTTP_INPUT_AUDIO_FILE_PATH=
+HTTP_INPUT_DOLBY_VISION_METADATA_FILE_PATH=
+HDR_CONVERSION_INPUT_FORMAT=
+HDR_CONVERSION_OUTPUT_FORMAT=
 S3_OUTPUT_BUCKET_NAME=
 S3_OUTPUT_ACCESS_KEY=
 S3_OUTPUT_SECRET_KEY=
