--- a/javascript/examples.properties.template
+++ b/javascript/examples.properties.template
@@ -3,6 +3,10 @@ BITMOVIN_API_KEY=
 BITMOVIN_TENANT_ORG_ID=
 HTTP_INPUT_HOST=
 HTTP_INPUT_FILE_PATH=
+HTTP_INPUT_AUDIO_FILE_PATH=
+HTTP_INPUT_DOLBY_VISION_METADATA_FILE_PATH=
+HDR_CONVERSION_INPUT_FORMAT=
+HDR_CONVERSION_OUTPUT_FORMAT=
 S3_OUTPUT_BUCKET_NAME=
 S3_OUTPUT_ACCESS_KEY=
 S3_OUTPUT_SECRET_KEY=
