--- a/python/examples.properties.template
+++ b/python/examples.properties.template
@@ -24,3 +24,8 @@ DRM_FAIRPLAY_IV=
 DRM_FAIRPLAY_URI=
 DRM_WIDEVINE_KID=
 DRM_WIDEVINE_PSSH=
+SPEKE_URL=
+SPEKE_ARN=
+SPEKE_GATEWAY_REGION=
+SPEKE_USERNAME=
+SPEKE_PASSWORD=
