publish updated examples

--- a/java/examples.properties.template
+++ b/java/examples.properties.template
@@ -24,6 +24,8 @@ DRM_FAIRPLAY_IV=
 DRM_FAIRPLAY_URI=
 DRM_WIDEVINE_KID=
 DRM_WIDEVINE_PSSH=
+DRM_CONTENT_ID=
+DRM_KEY_ID=
 SPEKE_URL=
 SPEKE_ARN=
 SPEKE_GATEWAY_REGION=
