--- a/php/composer.json
+++ b/php/composer.json
@@ -8,7 +8,7 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": ">=7.1.0",
         "bitmovin/bitmovin-api-sdk-php": "1.103.0"
     }
 }
