Update ConfigProvider, README.md and examples.properties.template

--- a/java/examples.properties.template
+++ b/java/examples.properties.template
@@ -31,3 +31,5 @@ SPEKE_ARN=
 SPEKE_GATEWAY_REGION=
 SPEKE_USERNAME=
 SPEKE_PASSWORD=
+AZURE_SPEECH_SERVICES_SUBSCRIPTION_KEY=
+AZURE_SPEECH_SERVICES_REGION=
