--- a/dotnet/Bitmovin.Api.Sdk.Examples/Bitmovin.Api.Sdk.Examples.csproj
+++ b/dotnet/Bitmovin.Api.Sdk.Examples/Bitmovin.Api.Sdk.Examples.csproj
@@ -2,11 +2,12 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Bitmovin.Api.Sdk" Version="1.174.0" />
+      <PackageReference Include="Bitmovin.Api.Sdk" Version="1.208.0" />
+      <PackageReference Include="YamlDotNet" Version="16.1.3" />
     </ItemGroup>
 
     <ItemGroup>
